--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,155 @@
 html,body{
     width: 100%;
     height: 100%;
+    background-image: url(assets/bg1.jpg);
+    background-size: cover;
+    font-family: 'Montserrat';
 }
 
-app{
-    margin: 0 auto;
+nav{
+    width: 100%;
+    height: 40px;
+    line-height: 40px;
+    background-color: black;
+    color: white;
+    padding: 0 60px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
+
+#app{
+    margin: 0 auto;
+    width: 90%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+    min-width: 1200px;
+    min-height: 600px;
+}
+
+#grid-box{
+    padding: 0 0 50px 0;
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-rows: 50px 5fr 50px;
+    grid-template-columns: repeat(7, 1fr);
+}
+
+#video-box{
+    grid-column: 1/6;
+    grid-row: 2/3;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5px;
+}
+
+#player{
+    width: 100%;
+
+}
+
+#title-box{
+    grid-column: 1/6;
+    grid-row: 1/2;
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+#title-box h3{
+    padding: 0 20px;
+    line-height: 50px;
+    color: white;
+    text-decoration: underline;
+}
+
+#control-box{
+    grid-column: 1/6;
+    grid-row: 3/4;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.control-sub-box{
+    display: flex;
+    flex-direction: row;
+}
+
+.btn-control{
+    height: 100%;
+    width: 100px;
+    margin: 0 8px 0 0;
+    background-color: red;
+    color: white;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.2s;
+}
+
+.btn-control:hover{
+    transform: scale(1.05);
+}
+
+#volume-bar{
+    width: 200px;
+    background-color: white;
+    margin: 0 10px 0 0;
+}
+
+#volume-value{
+    width: 100%;
+    height: 100%;
+    background-color: red;
+    transition: all 0.3s;
+}
+
+#choice-box{
+    grid-column:6/8;
+    grid-row: 1/4;
+    background-color: rgba(0, 0, 0, 0.4);
+    display: flex;
+    flex-direction: column;
+    padding: 5px 20px;
+    text-align: center;
+    justify-content: space-around;
+}
+
+.thumbnail-box{
+    width: 100%;
+    margin: 10px 0;
+    /* background-color: wheat; */
+    color: white;
+    display: flex;
+    flex-direction: row;
+    transition: all 0.3s;
+}
+
+.thumbnail-box:hover{
+    background-color: black;
+    transform : scale(1.05)
+}
+
+.thumbnail-box img{
+
+    max-height: 90px;
+    max-width: 160px;
+}
+
+.thumbnail-box div{
+    width: 50%;
+    display: flex;
+    text-align: center;
+    flex-direction: column;
+    justify-content: center;
+    padding: 5px;
+}
+
+.thumbnail-box h3{
+    font-size: 12px;
+}
+
+
